<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    tools:context="pack.tomainventario.tomainventario.Login">

    <ImageView
        android:layout_width="85dp"
        android:layout_height="90dp"
        android:src="@drawable/logoinicio"
        android:contentDescription="@string/content_description_logo"
        android:adjustViewBounds="true"/>

    <TextView android:id="@+id/label1"
        android:text="@string/toma_inventario"
        android:layout_marginTop="@dimen/margin_top_titulo"
        android:textSize="@dimen/toma_inventario"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <EditText android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_button"
        android:hint="@string/btn1"
        android:inputType="text" />

    <EditText android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_clave"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_button"
        android:textColor="@color/white"
        android:background="@drawable/button_selector"
        android:text="@string/btn1"/>
</LinearLayout>
