    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_bottom_peq"
    tools:context="pack.tomainventario.tomadeinventario.ActivacionInventario">
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/formulario"
    android:orientation="horizontal">

    <TextView android:id="@+id/txtNum"
        android:text="@string/txtNum"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"/>

    <EditText android:id="@+id/editNum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/formulario"
    android:orientation="horizontal">

    <TextView android:id="@+id/txtFecha"
        android:text="@string/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:gravity="center"/>

    <EditText android:id="@+id/editFecha"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/formulario"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtEstatus"
            android:text="@string/txtEstatus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center"/>

        <Spinner android:id="@+id/cmbStatus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/formulario"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtSede"
            android:text="@string/txtSede"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center"/>

        <EditText android:id="@+id/editSede"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/formulario"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtUbic"
            android:text="@string/txtUbic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center"/>

        <Spinner android:id="@+id/cmbUbic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/formulario"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtCosto"
            android:text="@string/txtCosto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center"/>

        <Spinner android:id="@+id/cmbCosto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/formulario"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtRPP"
            android:text="@string/txtRPP"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center"/>

        <EditText android:id="@+id/editRPP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:focusable="false"
            android:onClick="rpuDialog"/>
    </LinearLayout>

</LinearLayout>
    </ScrollView>