<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/tittle"
        android:text="@string/tittle_dialog"
        android:textSize="@dimen/toma_inventario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText android:id="@+id/edit_search"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:inputType="text" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/regular_margin"
            android:src="@drawable/search"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_logo"
            android:adjustViewBounds="true"/>
</LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <ListView android:id="@+id/listRpu"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"/>
</LinearLayout>