<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pack.tomainventario.tomadeinventario.DetalleToma">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtNum"
            android:text="@string/numero"
            android:layout_marginLeft="@dimen/check_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/lista_main_subs"/>

        <EditText android:id="@+id/editNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtDesc"
            android:text="@string/descripcion"
            android:layout_marginLeft="@dimen/check_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/lista_main_subs"/>

        <EditText android:id="@+id/editDesc"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtFecha"
            android:text="@string/fecha"
            android:layout_marginLeft="@dimen/check_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/lista_main_subs"/>

        <EditText android:id="@+id/editFecha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtUbic"
            android:text="@string/ubic"
            android:layout_marginLeft="@dimen/check_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/lista_main_subs"/>

        <EditText android:id="@+id/editUbic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtStatus"
            android:text="@string/status"
            android:layout_marginLeft="@dimen/check_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/lista_main_subs"/>

        <EditText android:id="@+id/edStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtRPU"
            android:text="@string/dRpu"
            android:layout_marginLeft="@dimen/check_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/lista_main_subs"/>

        <EditText android:id="@+id/editRPU"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:focusable="false"
            android:inputType="text" />
        <Button
            android:id="@+id/btnRpu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/check_margin"
            android:background="@drawable/button_selector"
            android:layout_gravity="center"
            android:text="@string/editar"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView android:id="@+id/txtEdo"
                    android:text="@string/edo"
                    android:layout_marginLeft="@dimen/check_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textSize="@dimen/lista_main_subs"/>

                <EditText android:id="@+id/editEdo"
                    android:focusable="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView android:id="@+id/txtObs"
                    android:text="@string/observacion"
                    android:layout_marginLeft="@dimen/check_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textSize="@dimen/lista_main_subs"/>

                <EditText android:id="@+id/editObs"
                    android:focusable="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"/>

            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btnObs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/check_margin"
            android:background="@drawable/button_selector"
            android:layout_gravity="center"
            android:text="@string/editar"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView android:id="@+id/foto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/content_description_logo"
            android:adjustViewBounds="true"/>
        <Button
            android:id="@+id/btnFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/check_margin"
            android:layout_marginLeft="@dimen/margin_top_button"
            android:background="@drawable/button_selector"
            android:text="@string/foto"/>


    </LinearLayout>
</LinearLayout>
