<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pack.tomainventario.tomadeinventario.NuevaToma">

    <TextView android:id="@+id/tittle"
        android:text="@string/nueva_toma"
        android:textSize="@dimen/toma_inventario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ListView android:id="@+id/LstOpciones"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/activity_grid_margin"
        android:layout_marginLeft="@dimen/activity_grid_margin"
        android:layout_marginTop="@dimen/activity_grid_margin"
        android:layout_marginBottom="@dimen/activity_grid_margin"
        android:layout_weight="1"/>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/manual"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/manual"
            android:background="@drawable/button_selector"
            android:layout_height="match_parent"
            android:src="@drawable/search"/>
        <Button
            android:id="@+id/lote"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/no_manual"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:src="@drawable/search"/>
    </LinearLayout>

</LinearLayout>
