<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="pack.tomainventario.tomadeinventario.ActivacionPorSede">




 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
     android:padding="@dimen/margin_bottom_peq">

    <ImageView
        android:layout_width="85dp"
        android:layout_height="90dp"
        android:src="@drawable/logoinicio"
        android:contentDescription="@string/content_description_logo"
        android:adjustViewBounds="true"/>

    <TextView android:id="@+id/label1"
        android:text="@string/activacion_sede"
        android:textSize="@dimen/toma_inventario"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/formulario"
         android:orientation="horizontal">

         <TextView android:id="@+id/txtRPP"
             android:text="@string/txtRPP"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="top"
             android:gravity="center"/>

         <EditText android:id="@+id/editRPP"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text"
             android:focusable="false"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/formulario"
         android:orientation="horizontal">

         <TextView android:id="@+id/txtFecha"
             android:text="@string/txtFecha"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="top"
             android:gravity="center"/>

         <EditText android:id="@+id/editFecha"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text"
             android:focusable="false"/>
     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/formulario"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtSede"
            android:text="@string/txtSede"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center"/>

        <Spinner android:id="@+id/cmbSede"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <TextView android:id="@+id/txtUbic"
        android:text="@string/txtUbic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/margin_top_titulo"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical">

         <ListView
             android:id="@+id/listUbic"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"/>

     </LinearLayout>

    </LinearLayout>
</ScrollView>